# dagster-capstone

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
capstone/: __init__.py
capstone/assets/: holidays.py
capstone/partitions/: __init__.py
capstone/resources/: __init__.py
data/bronze/: db.duckdb
